@@ -129,10 +129,11 @@ protected:
 		ShellMenuHelp,
 		ShellMenuShowChanged,
 		ShellMenuIgnoreSub,
+		ShellMenuDeleteIgnoreSub,
 		ShellMenuIgnore,
-		ShellMenuIgnoreFile,
+		ShellMenuDeleteIgnore,
 		ShellMenuIgnoreCaseSensitive,
-		ShellMenuIgnoreCaseInsensitive,
+		ShellMenuDeleteIgnoreCaseSensitive,
 		ShellMenuRepoBrowse,
 		ShellMenuBlame,
 		ShellMenuApplyPatch,
